style(about): fix view image-wrapper--exp-end on resolution tablet and below

--- a/assets/scss/blocks/_about-page.scss
+++ b/assets/scss/blocks/_about-page.scss
@@ -123,8 +123,7 @@
         margin: 24px 0 0 0;
 
         @include media.tablet {
-          top: 6%;
-          right: -10%;
+          left: -9%;
         }
       }
 
